ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-home-service
  labels:
    app: apple-home-service
    env: devops
spec:
  selector:
    app: apple-home
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: apple-mobileice
  labels:
    app: apple-home-service
    env: devops
spec:
  selector:
    app: apple-home
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
