ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-ingress
  labels:
    name: apple-ingress
spec:
  rules:
  - host: apple.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apple-home-service
            port: 
              number: <Port>
